(STRETCH : REDUX : BUGFIXING SPREE) : refactored Note component for redux and fixed some styles

--- a/lambda-notes/src/components/SideBar/index.css
+++ b/lambda-notes/src/components/SideBar/index.css
@@ -8,7 +8,7 @@
   background: #D8D8D8;
   border-right: 1px solid #979797;
   box-sizing: border-box;
-  height: 100vh;
+  height: 100%;
 }
 
 .sidebar-wrapper h1 {
